--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: David C. Breneman
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "David.JPG" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  I'm an Oregon Professional Land Surveyor, FAA Part 107 Drone Pilot 
   <br><br>
-  Second description 
+  and Graduate Student at the University of Oklahoma.
   <br><br>
   <a href="https://www.linkedin.com/in/david-breneman-79b526115">View My LinkedIn Profile</a> 
   
